--- a/collated/main/A0139402M.md
+++ b/collated/main/A0139402M.md
@@ -1,4 +1,22 @@
 # A0139402M
+###### \java\taskle\commons\util\DateFormatUtil.java
+``` java
+    /**
+     * Formats the reminder date given. If no time is specified, it'll default
+     * to 00:00 timing for the date specified.
+     * 
+     * @param date
+     * @return
+     */
+    public static String formatRemindDate(Date date) {
+        if (date == null) {
+            return "";
+        }
+        
+        return SIMPLE_DATE_TIME_FORMAT.format(date);
+    }
+
+```
 ###### \java\taskle\commons\util\TaskUtil.java
 ``` java
 
@@ -103,7 +121,7 @@ public class EditCommand extends Command {
 
     public final Name newName;
 
-    public EditCommand(int targetIndex, String newName) throws IllegalValueException {
+    public EditCommand(int targetIndex, String newName) {
         this.targetIndex = targetIndex;
         this.newName = new Name(newName);
     }
@@ -115,13 +133,16 @@ public class EditCommand extends Command {
             indicateAttemptToExecuteIncorrectCommand(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
             return new CommandResult(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX, false);
         }
+        
         int offsetIndex = targetIndex - 1;
         ReadOnlyTask taskToEdit = lastShownList.get(offsetIndex);
         String oldName = taskToEdit.getName().fullName; 
+        
         try {
-            model.storeTaskManager();
+            model.storeTaskManager(COMMAND_WORD);
             model.editTask(offsetIndex, newName);
         } catch (TaskNotFoundException pnfe) {
+            model.rollBackTaskManager(false);
             assert false : "The target task cannot be missing";
         }
         
@@ -139,6 +160,9 @@ public class EditCommand extends Command {
 ```
 ###### \java\taskle\logic\commands\RemindCommand.java
 ``` java
+/**
+ * Sets a reminder for an existing task.
+ */
 public class RemindCommand extends Command {
     
     public static final String COMMAND_WORD = "remind";
@@ -158,8 +182,7 @@ public class RemindCommand extends Command {
 
     public final Date remindDate;
 
-    public RemindCommand(int targetIndex, Date remindDate) throws IllegalValueException {
-        assert remindDate != null;
+    public RemindCommand(int targetIndex, Date remindDate) {
         this.targetIndex = targetIndex; 
         this.remindDate = remindDate;
     }
@@ -176,13 +199,15 @@ public class RemindCommand extends Command {
         ReadOnlyTask taskToEdit = lastShownList.get(offsetIndex);
         String oldRemindDate = taskToEdit.getRemindDetailsString();
         try {
-            model.storeTaskManager();
+            model.storeTaskManager(COMMAND_WORD);
             String result = model.editTaskRemindDate(offsetIndex, remindDate);
             if(result != null) {
+                model.rollBackTaskManager(false);
                 indicateAttemptToExecuteIncorrectCommand(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, result));
                 return new CommandResult(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, result), false);
             }
         } catch (TaskNotFoundException pnfe) {
+            model.rollBackTaskManager(false);
             assert false : "The target task cannot be missing";
         }
 
@@ -221,7 +246,7 @@ public class RescheduleCommand extends Command{
 
     public final List<Date> dates;
 
-    public RescheduleCommand(int targetIndex, List<Date> dates) throws IllegalValueException {
+    public RescheduleCommand(int targetIndex, List<Date> dates) {
         this.targetIndex = targetIndex; 
         this.dates = dates;
     }
@@ -238,9 +263,10 @@ public class RescheduleCommand extends Command{
         ReadOnlyTask taskToEdit = lastShownList.get(offsetIndex);
         String oldDetails = taskToEdit.getDetailsString();
         try {
-            model.storeTaskManager();
+            model.storeTaskManager(COMMAND_WORD);
             model.editTaskDate(offsetIndex, dates);
         } catch (TaskNotFoundException pnfe) {
+            model.rollBackTaskManager(false);
             assert false : "The target task cannot be missing";
         }
         String newDate = getDateString(dates);
@@ -258,9 +284,9 @@ public class RescheduleCommand extends Command{
     private String getDateString(List<Date> dates) {
         String newDate = "";
         if(dates == null) {
-            newDate = DateFormatUtil.formatDate(null);
+            newDate = DateFormatUtil.formatSingleDate(null);
         } else if(dates.size() == 1) {
-            newDate = DateFormatUtil.formatDate(dates.get(0));
+            newDate = DateFormatUtil.formatSingleDate(dates.get(0));
         } else if(dates.size() == 2) {
             newDate = DateFormatUtil.formatEventDates(dates.get(0), dates.get(1));
         }
@@ -269,15 +295,49 @@ public class RescheduleCommand extends Command{
 
 }
 ```
+###### \java\taskle\logic\Logic.java
+``` java
+    List<Task> verifyReminder(Date currentDateTime);
+    
+    void dismissReminder(Date currentDateTime);
+
+```
+###### \java\taskle\logic\LogicManager.java
+``` java
+    @Override
+    public List<Task> verifyReminder(Date currentDateTime) {
+        return model.verifyRemindDate(currentDateTime);
+    }
+    
+    @Override
+    public void dismissReminder(Date currentDateTime) {
+        model.dismissReminder(currentDateTime);
+    }
+```
+###### \java\taskle\logic\parser\AddCommandParser.java
+``` java
+    /**
+     * Method to check if the reminder date is after the end date of the task 
+     * 
+     * @param remindDate given remind date
+     * @param dates list of dates
+     * @return
+     */
+    private boolean checkInvalidReminderDate(Date remindDate, List<Date> dates) {
+        if (remindDate.after(dates.get(dates.size() - 1))) {
+            return true;
+        }
+        
+        return false;
+    }
+    
+```
 ###### \java\taskle\logic\parser\EditCommandParser.java
 ``` java
 /**
  * EditCommandParser class to handle parsing of commands
  *
  */
-```
-###### \java\taskle\logic\parser\EditCommandParser.java
-``` java
 public class EditCommandParser extends CommandParser {
 
     public EditCommandParser() {
@@ -320,16 +380,15 @@ public class EditCommandParser extends CommandParser {
                                   EditCommand.MESSAGE_USAGE));
         }
         
-        try {
-            return new EditCommand(index.get(), name.get());
-        } catch (IllegalValueException e) {
-            return new IncorrectCommand(e.getMessage());
-        }
+        return new EditCommand(index.get(), name.get());
     }
 }
 ```
 ###### \java\taskle\logic\parser\RemindCommandParser.java
 ``` java
+/**
+ * RemindCommandParser class to handle parsing of remind commands *
+ */
 public class RemindCommandParser extends CommandParser{
     
 
@@ -365,33 +424,30 @@ public class RemindCommandParser extends CommandParser{
         }
         
         if (newRemindDateTime.indexOf("clear") == 0) {
-            clearRemind(index);
+            return clearRemind(index);
         }
         
         List<Date> dates = DateParser.parse(newRemindDateTime);
         if(dates.size() != 1) {
             return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, RemindCommand.MESSAGE_USAGE));
         }
-        try {
-            assert dates.size() == 1;
-            return new RemindCommand(index.get(), dates.get(0));
-        } catch (IllegalValueException e) {
-            return new IncorrectCommand(e.getMessage());
-        }
 
+        assert dates.size() == 1;
+        return new RemindCommand(index.get(), dates.get(0));
     }
     
     private Command clearRemind(Optional<Integer> index) {
-        try {
-            return new RemindCommand(index.get(), null);
-        } catch (IllegalValueException e) {
-            return new IncorrectCommand(e.getMessage());
-        }
+        return new RemindCommand(index.get(), null);
     }
 }
 ```
 ###### \java\taskle\logic\parser\RescheduleCommandParser.java
 ``` java
+/**
+ * RescheduleCommandParser class to handle parsing of reschedule commands.
+ * @author Abel
+ *
+ */
 public class RescheduleCommandParser extends CommandParser {
 
     public RescheduleCommandParser() {
@@ -430,23 +486,15 @@ public class RescheduleCommandParser extends CommandParser {
         }
         
         if (newDateTime.indexOf("clear") == 0) {
-            try {
-                return new RescheduleCommand(index.get(), null);
-            } catch (IllegalValueException e) {
-                return new IncorrectCommand(e.getMessage());
-            }
+            return new RescheduleCommand(index.get(), null);
         }
         
         List<Date> dates = DateParser.parse(newDateTime);
         if(dates.size() == 0 || dates.size() > 2) {
             return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, RescheduleCommand.MESSAGE_USAGE));
         }
-        try {
-            return new RescheduleCommand(index.get(), dates);
-        } catch (IllegalValueException e) {
-            return new IncorrectCommand(e.getMessage());
-        }
 
+        return new RescheduleCommand(index.get(), dates);
     }
 
 }
@@ -588,9 +636,10 @@ public class RescheduleCommandParser extends CommandParser {
         }
         Task toEdit = toEditOp.get();
         
-        if(checkInvalidRemindDate(toEdit, date)) {
+        if(date != null && checkInvalidRemindDate(toEdit, date)) {
             return Messages.MESSAGE_REMINDER_AFTER_FINAL_DATE;
         }
+        
         toEdit.setRemindDate(date);
         internalList.set(index, toEdit);
         logger.info("Task " + index + " edited reminder date to " + toEdit.getRemindDetailsString());
@@ -688,9 +737,9 @@ public class RescheduleCommandParser extends CommandParser {
  */
 public class SystemTray {
 
-    private static final int NOTIFICATION_INTERVAL = 60 * 1000;
+    private static final long NOTIFICATION_INTERVAL = 60 * 1000;
 
-    private static final int NOTIFICATION_DELAY = 1 * 1000;
+    private static final long NOTIFICATION_DELAY = 1 * 1000;
     
     private final Logger logger = LogsCenter.getLogger(CommandBox.class);
 
@@ -731,10 +780,6 @@ public class SystemTray {
         if (!java.awt.SystemTray.isSupported()) {
             String error = "No system tray support, application running without system tray.";
             logger.severe(error);
-            Notifications.create()
-                .title("Error")
-                .text(error)
-                .showWarning();
             return;
         }
         
@@ -782,14 +827,12 @@ public class SystemTray {
      */
     private void addMenuItems(java.awt.SystemTray tray, java.awt.TrayIcon trayIcon) {
         // if the user selects the default menu item (which includes the app
-        // name),
-        // show the main app stage.
+        // name), show the main app stage.
         java.awt.MenuItem openItem = new java.awt.MenuItem("Open Taskle");
         openItem.addActionListener(event -> Platform.runLater(this::showStage));
 
         // the convention for tray icons seems to be to set the default icon for
-        // opening
-        // the application stage in a bold font.
+        // opening the application stage in a bold font.
         java.awt.Font defaultFont = java.awt.Font.decode(null);
         java.awt.Font boldFont = defaultFont.deriveFont(java.awt.Font.BOLD);
         openItem.setFont(boldFont);
@@ -797,10 +840,6 @@ public class SystemTray {
         java.awt.MenuItem dismissReminderItem = new java.awt.MenuItem("Dismiss Reminders");
         dismissReminderItem.addActionListener(event -> Platform.runLater(this::dismissReminders));
                 
-        // to really exit the application, the user must go to the system tray
-        // icon
-        // and select the exit option, this will shutdown JavaFX and remove the
-        // tray icon (removing the tray icon will also shut down AWT).
         java.awt.MenuItem exitItem = new java.awt.MenuItem("Exit");
         exitItem.addActionListener(event -> {
             notificationTimer.cancel();
@@ -847,28 +886,10 @@ public class SystemTray {
 
     }
     
-    public static void showNotification() {
-        currentDateTime = new Date();
-        List<Task> taskRemindDisplay = logic.verifyReminder(currentDateTime);
-        if(taskRemindDisplay.isEmpty()) {
-            return;
-        }
-        StringBuilder sb = new StringBuilder();
-        for (int i = 0; i < taskRemindDisplay.size(); i++) {
-            Task task = taskRemindDisplay.get(i);
-            sb.append(task.getName().fullName);
-            if(!task.getDetailsString().equals("")) {
-                sb.append(" Date: " + task.getDetailsString());
-            }
-            sb.append("\n");
-        }
-        javax.swing.SwingUtilities.invokeLater(() -> trayIcon.displayMessage("Reminder!",
-                sb.toString(), java.awt.TrayIcon.MessageType.INFO));
-    }
-    
     private void dismissReminders() {
         logic.dismissReminder(currentDateTime);
     }
+    
     /**
      * Shows the application stage and ensures that it is brought ot the front
      * of all stages.
