--- a/collated/main/A0141780J.md
+++ b/collated/main/A0141780J.md
@@ -1,150 +1,178 @@
 # A0141780J
-###### \java\taskle\logic\commands\AddCommand.java
+###### \java\taskle\commons\events\model\TaskFilterChangedEvent.java
 ``` java
-
-    public static final String COMMAND_WORD = "add";
-    public static final String COMMAND_WORD_SHORT = "a";
-
-    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Adds a task into Taskle.\n"
-            + "\nFormat: add task_name by [date + time] [remind date + time]\n"
-            + "or\nadd task_name from [date + time] to [date + time] [remind date + time]\n"
-            + "\nExample: " + "add Business Trip from 4 Oct to 5 Oct remind 3 Oct 2pm";
-
-    public static final String MESSAGE_SUCCESS = "Added New Task: %1$s";
-    public static final String MESSAGE_DUPLICATE_TASK = "This task already exists in Taskle!";
-
-    private final Task toAdd;
-
-    /**
-     * Convenience constructor using raw name value.
-     *
-     * @throws IllegalValueException if any of the raw values are invalid
-     */
-    public AddCommand(String name)
-            throws IllegalValueException {
-        assert (name != null);
-        this.toAdd = new FloatTask(new Name(name));
-    }
-    
-    /**
-     * Convenience constructor using raw name value.
-     *
-     * @throws IllegalValueException if any of the raw values are invalid
-     */
-    public AddCommand(String nameString, Date startDate, Date endDate, Date remindDate)
-                      throws IllegalValueException {
-        assert (nameString != null);
-        
-        Name name = new Name(nameString);
-        if (startDate != null && endDate != null) {
-            toAdd = new EventTask(name, startDate, endDate);
-        } else if (endDate != null) {
-            toAdd = new DeadlineTask(name, endDate);
-        } else {
-            toAdd = new FloatTask(name);
-        }
-        
-        if (remindDate != null) {
-            toAdd.setRemindDate(remindDate);
-        }
-    }
-    
-    @Override
-    public CommandResult execute() {
-        assert model != null;        
-        model.storeTaskManager();
-        model.addTask(toAdd);
-        
-        // Display reminder message only when reminder is set
-        if (toAdd.getRemindDate() == null) {
-            return new CommandResult(String.format(MESSAGE_SUCCESS, toAdd), true);
-        } else {
-            return new CommandResult(
-                    String.format(MESSAGE_SUCCESS, toAdd 
-                    + " Reminder on: " + toAdd.getRemindDetailsString()), true);
-        }
-    }
-
-}
-
-```
-###### \java\taskle\logic\commands\FindCommand.java
-``` java
-/**
- * Finds and lists all tasks in task manager whose name contains any of the argument keywords.
- * Keyword matching is case sensitive.
+/** Indicates the filters in TaskList has changed.
+ *  When is showing all, showing pending, done and overdue are all false.
+ *  
  */
-public class FindCommand extends Command {
-    
-    public static final String COMMAND_WORD = "find";
-    public static final String COMMAND_WORD_SHORT ="f";
+public class TaskFilterChangedEvent extends BaseEvent {
 
-    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Finds all tasks in Taskle that both contain the keywords and fulfill the specific status."
-            + "\n\nFormat: " + COMMAND_WORD + " keywords [-status]\n"
-            + "\nExample: " + COMMAND_WORD + " books";
+    public boolean isAllShown;
+    public boolean isPendingShown;
+    public boolean isDoneShown;
+    public boolean isOverdueShown;
 
-    private final Set<String> keywords;
-    
-    // Fields for whether to show the corresponding statuses
-    private boolean showPending = true;
-    private boolean showDone = false;
-    private boolean showOverdue = true;
-
-    public FindCommand(Set<String> keywords) {
-        this.keywords = keywords;
-    }
-    
-    public FindCommand(Set<String> keywords, boolean showPending, 
-                       boolean showDone, boolean showOverdue) {
-        this.keywords = keywords;
-        this.showPending = showPending;
-        this.showDone = showDone;
-        this.showOverdue = showOverdue;
+    /**
+     * Constructs a TaskFilterChangedEvent, given parameters represents
+     * the new filters after the change.
+     * @param isPendingShown whether to show pending tasks
+     * @param isDoneShown whether to show done tasks
+     * @param isOverdueShown whether to show overdue tasks
+     */
+    public TaskFilterChangedEvent(boolean isPendingShown, boolean isDoneShown,
+            boolean isOverdueShown){
+        if (isPendingShown && isDoneShown && isOverdueShown) {
+            isAllShown = true;
+            return;
+        }
+        
+        this.isPendingShown = isPendingShown;
+        this.isDoneShown = isDoneShown;
+        this.isOverdueShown = isOverdueShown;
     }
 
     @Override
-    public CommandResult execute() {
-        model.updateFilters(keywords, showPending, showDone, showOverdue);
-        return new CommandResult(
-                getMessageForTaskListShownSummary(
-                        model.getFilteredTaskList().size()),
-                true);
+    public String toString() {
+        String message = StatusFormatUtil.getFormattedFilters(
+                isPendingShown, isDoneShown, isOverdueShown);
+        return "Filter set to: " + message;
     }
     
+    public boolean isPendingShown() {
+        return isPendingShown;
+    }
+    
+    public boolean isOverdueShown() {
+        return isOverdueShown;
+    }
+    
+    public boolean isDoneShown() {
+        return isDoneShown;
+    }
+    
+    public boolean isAllShown() {
+        return isAllShown;
+    }
 }
 ```
-###### \java\taskle\logic\commands\ListCommand.java
+###### \java\taskle\commons\util\DateFormatUtil.java
 ``` java
-public class ListCommand extends Command {
+    /**
+     * Patterns for formatting. One for just the date and another with the time
+     */
+    private static final String DATE_DISPLAY_PATTERN = "d MMM yyyy";
+    private static final String TIME_DISPLAY_PATTERN = "h:mma";
+    private static final String DATE_TIME_DISPLAY_PATTERN = "d MMM yyyy, h:mma";
+    private static final SimpleDateFormat SIMPLE_DATE_FORMAT = new SimpleDateFormat(DATE_DISPLAY_PATTERN);
+    private static final SimpleDateFormat SIMPLE_TIME_FORMAT = new SimpleDateFormat(TIME_DISPLAY_PATTERN);
+    private static final SimpleDateFormat SIMPLE_DATE_TIME_FORMAT = new SimpleDateFormat(DATE_TIME_DISPLAY_PATTERN);
 
-    public static final String COMMAND_WORD = "list";
-    public static final String COMMAND_WORD_SHORT = "l";
+    private static final String EVENT_DATES_DELIMITER = " to ";
 
-    public static final String MESSAGE_LIST_SUCCESS = 
-            "Listed %1$s tasks";
-    
-    public static final String MESSAGE_USAGE = COMMAND_WORD 
-            + ": Lists all tasks with the specified statuses\n"
-            + "\nFormat: " + COMMAND_WORD + " [-status]\n"
-            + "Note: You can have more than 1 statuses or none at all\n"
-            + "If no status is specified, pending and overdue items will be listed\n"
-            + "\nExample: " + COMMAND_WORD + " -done -pending";
-    
-    // Fields for whether to show the corresponding statuses
-    private final boolean showPending;
-    private final boolean showDone;
-    private final boolean showOverdue;
+    private static final Calendar calendar = Calendar.getInstance();
 
-    public ListCommand(boolean pending, boolean done, boolean overdue) {
-        this.showPending = pending;
-        this.showDone = done;
-        this.showOverdue = overdue;
+    /** Private constructor to prevent instantiation. */
+    private DateFormatUtil() {
     }
 
-    @Override
-    public CommandResult execute() {
-        model.updateFilters(showPending, showDone, showOverdue);
+    /**
+     * Formats given start and end dates according to their respective time and
+     * dates in our desired format.
+     * 
+     * @param startDate start date object
+     * @param endDate end date object
+     * @return formatted string for date time for display to user
+     */
+    public static String formatEventDates(Date startDate, Date endDate) {
+        if (startDate == null || endDate == null) {
+            return "";
+        }
+
+        calendar.setTime(startDate);
+        int startDay = calendar.get(Calendar.DAY_OF_YEAR);
+        int startYear = calendar.get(Calendar.YEAR);
+
+        calendar.setTime(endDate);
+        int endDay = calendar.get(Calendar.DAY_OF_YEAR);
+        int endYear = calendar.get(Calendar.YEAR);
+
+        if (startDate.equals(endDate)) {
+            return formatSingleDate(endDate);
+        } else if (startDay == endDay && startYear == endYear) {
+            return formatSameDayEventDates(startDate, endDate);
+        } else {
+            return formatTwoDaysEventDates(startDate, endDate);
+        }
+    }
+    
+    /**
+     * Formats the date as a String such that time is not shown if its 
+     * 23:59:99.
+     * Date is also displayed in format as designed in UI.
+     * 
+     * @param date Given date object to format
+     * @return formatted date time string for display to user
+     */
+    public static String formatSingleDate(Date date) {
+        if (date == null) {
+            return "";
+        }
+
+        calendar.setTime(date);
+        int hour = calendar.get(Calendar.HOUR_OF_DAY);
+        int min = calendar.get(Calendar.MINUTE);
+        int sec = calendar.get(Calendar.SECOND);
+        int msec = calendar.get(Calendar.MILLISECOND);
+        if (hour == 23 && min == 59 && sec == 59) {
+            return SIMPLE_DATE_FORMAT.format(date);
+        } else {
+            return SIMPLE_DATE_TIME_FORMAT.format(date);
+        }
+    }
+    
+    private static String formatSameDayEventDates(Date startDate, Date endDate) {
+        return formatSingleDate(startDate) 
+               + EVENT_DATES_DELIMITER
+               + SIMPLE_TIME_FORMAT.format(endDate);
+    }
+    
+    private static String formatTwoDaysEventDates(Date startDate, Date endDate) {
+        return formatSingleDate(startDate) + EVENT_DATES_DELIMITER 
+               + formatSingleDate(endDate);
+    }
+
+```
+###### \java\taskle\commons\util\DateFormatUtil.java
+``` java
+    /**
+     * Used for converting a given array of dates into an add command friendly
+     * format.
+     * 
+     * @param dates dates to be added to this formatted String
+     * @return command ready format for the dates
+     */
+    public static String getDateArgString(Date... dates) {
+        String[] dateStrings = new String[dates.length];
+        for (int i = 0; i < dates.length; i++) {
+            dateStrings[i] = SIMPLE_DATE_TIME_FORMAT.format(dates[i]);
+        }
         
+        return String.join(EVENT_DATES_DELIMITER, dateStrings);
+    }
+}
+```
+###### \java\taskle\commons\util\StatusFormatUtil.java
+``` java
+    /**
+     * Returns a formatted string for filters as specified.
+     * 
+     * @param showPending whether to show or filter pending
+     * @param showDone whether to show or filter done
+     * @param showOverdue whether to show or filter overdue
+     * @return a formatted String, filters are delimited by commas
+     */
+    public static String getFormattedFilters(
+            boolean showPending, boolean showDone, boolean showOverdue) {
         String[] messageArray = new String[] {
                 "Not Pending", "Not Done", "Not Overdue"
         };
@@ -163,8 +191,205 @@ public class ListCommand extends Command {
         
         String message = String.join(", ", messageArray);
         
+        return message;
+    }
+    
+}
+```
+###### \java\taskle\logic\commands\AddCommand.java
+``` java
+
+    public static final String COMMAND_WORD = "add";
+    public static final String COMMAND_WORD_SHORT = "a";
+
+    public static final String MESSAGE_USAGE = "\n" + COMMAND_WORD + ": Adds a task / event into Taskle (with its respective deadline or end-date.)\n"
+            + "\nFormat: add task_name by [date + time] [remind date + time]\n"
+            + "or\nadd task_name from [date + time] to [date + time] [remind date + time]\n"
+            + "\nExample: " + "add Business Trip from 4 Oct to 5 Oct remind 3 Oct 2pm";
+
+    public static final String MESSAGE_SUCCESS = "Added New Task: %1$s";
+    public static final String MESSAGE_DUPLICATE_TASK = "This task already exists in Taskle!";
+
+    private final Task toAdd;
+
+    /**
+     * Convenience constructor using raw name value.
+     * 
+     * @param name Name of  task to be added
+     */
+    public AddCommand(String name) {
+        assert (name != null);
+        this.toAdd = new FloatTask(new Name(name));
+    }
+    
+    /**
+     * Convenience constructor using raw name value.
+     * 
+     * @param nameString name of task in string format
+     * @param startDate start date of task
+     * @param endDate end date of task
+     * @param remindDate reminder date of task
+     */
+    public AddCommand(String nameString, Date startDate, 
+                      Date endDate, Date remindDate) {
+        assert (nameString != null);
+        Name name = new Name(nameString);
+        if (startDate != null && endDate != null) {
+            toAdd = new EventTask(name, startDate, endDate);
+        } else if (endDate != null) {
+            toAdd = new DeadlineTask(name, endDate);
+        } else {
+            toAdd = new FloatTask(name);
+        }
+        
+        if (remindDate != null) {
+            toAdd.setRemindDate(remindDate);
+        }
+    }
+    
+    @Override
+    public CommandResult execute() {
+        assert model != null;        
+        model.storeTaskManager(COMMAND_WORD);
+        model.addTask(toAdd);
+        
+        // Display reminder message only when reminder is set
+        if (toAdd.getRemindDate() == null) {
+            return new CommandResult(String.format(MESSAGE_SUCCESS, toAdd), true);
+        } else {
+            return new CommandResult(
+                    String.format(MESSAGE_SUCCESS, toAdd 
+                    + " Reminder on: " + toAdd.getRemindDetailsString()), true);
+        }
+    }
+
+}
+
+```
+###### \java\taskle\logic\commands\FindCommand.java
+``` java
+/**
+ * Finds and lists all tasks in task manager whose name contains any 
+ * of the argument keywords. Keyword matching is case sensitive.
+ */
+public class FindCommand extends Command {
+    
+    public static final String COMMAND_WORD = "find";
+    public static final String COMMAND_WORD_SHORT ="f";
+
+    public static final String MESSAGE_USAGE = "\n" 
+            + COMMAND_WORD + ": Finds all tasks in Taskle that both contain the keywords and fulfill the specific status."
+            + "\n\nFormat: " + COMMAND_WORD + " keywords [-status]\n"
+            + "\nExample: " + COMMAND_WORD + " books";
+
+    private final Set<String> keywords;
+    
+    // Fields for whether to show the corresponding statuses
+    private boolean isPendingShown = true;
+    private boolean isDoneShown = false;
+    private boolean isOverdueShown = true;
+
+    public FindCommand(Set<String> keywords) {
+        this.keywords = keywords;
+    }
+    
+    public FindCommand(Set<String> keywords, boolean isPendingShown, 
+                       boolean isDoneShown, boolean isOverdueShown) {
+        this.keywords = keywords;
+        this.isPendingShown = isPendingShown;
+        this.isDoneShown = isDoneShown;
+        this.isOverdueShown = isOverdueShown;
+    }
+
+    @Override
+    public CommandResult execute() {
+        model.updateFilters(keywords, isPendingShown, isDoneShown, isOverdueShown);
+        return new CommandResult(
+                getMessageForTaskListShownSummary(
+                        model.getFilteredTaskList().size()),
+                true);
+    }
+    
+}
+```
+###### \java\taskle\logic\commands\ListCommand.java
+``` java
+/**
+ * Lists all tasks in the Task Manager to the user.
+ */
+public class ListCommand extends Command {
+
+    public static final String COMMAND_WORD = "list";
+    public static final String COMMAND_WORD_SHORT = "l";
+
+    public static final String MESSAGE_LIST_SUCCESS = 
+            "Listed %1$s tasks";
+    
+    public static final String MESSAGE_USAGE = COMMAND_WORD 
+            + ": Lists all tasks with the specified statuses\n"
+            + "\nFormat: " + COMMAND_WORD + " [-status]\n"
+            + "Note: You can have more than 1 statuses or none at all\n"
+            + "If no status is specified, pending and overdue items will be listed\n"
+            + "\nExample: " + COMMAND_WORD + " -done -pending";
+    
+    // Fields for whether to show the corresponding statuses
+    private final boolean isPendingShown;
+    private final boolean isDoneShown;
+    private final boolean isOverdueShown;
+
+    public ListCommand(boolean isPendingShown, boolean isDoneShown, 
+                       boolean isOverdueShown) {
+        this.isPendingShown = isPendingShown;
+        this.isDoneShown = isDoneShown;
+        this.isOverdueShown = isOverdueShown;
+    }
+
+    @Override
+    public CommandResult execute() {
+        model.updateFilters(isPendingShown, isDoneShown, isOverdueShown);
+        String message = StatusFormatUtil.getFormattedFilters(
+                isPendingShown, isDoneShown, isOverdueShown);
         return new CommandResult(String.format(MESSAGE_LIST_SUCCESS, message), 
                                  true);
+    }
+
+}
+```
+###### \java\taskle\logic\parser\AddCommandParser.java
+``` java
+    /**
+     * Generates a deadline add command with reminder date
+     * 
+     * @param nameString name to be used for deadline add command
+     * @param dates List of dates to be used to generate deadline. Should be 1.
+     * @param remindDate reminder date. Nullable.
+     * @return a valid deadline add command with reminder date
+     */
+    private AddCommand generateDeadlineAddCommand(
+            String nameString, List<Date> dates, Date remindDate) {
+        assert dates.size() == 1;
+        return new AddCommand(nameString, null, dates.get(0), remindDate);
+    }
+
+    /**
+     * Generates a event add command with reminder date
+     * 
+     * @param fullArgs full argument string
+     * @param name name to be used for deadline add command
+     * @param dates List of dates to be used to generate deadline. Should be 1.
+     * @param remindDate List of dates to be used for reminder date. Should be 1.
+     * @return a valid event add command with reminder date
+     */
+    private AddCommand generateEventAddCommand(
+            String name, List<Date> dates, Date remindDate) {
+        assert dates.size() == 1 || dates.size() == 2;
+
+        // There are either 2 or 1 dates given, generate accordingly
+        if (dates.size() == 2) {
+            return new AddCommand(name, dates.get(0), dates.get(1), remindDate);
+        } else {
+            return new AddCommand(name, dates.get(0), dates.get(0), remindDate);
+        }
     }
 
 }
@@ -173,37 +398,31 @@ public class ListCommand extends Command {
 ``` java
 /**
  * Model class to encapsulate the information provided
- * by each row in the help window.
- * @author Abel
- *
+ * by each row in the help window. *
  */
 public class CommandGuide {
     
     // Member variables for a CommandGuide object
     private String actionName;
     private String commandWord;
+    private String shortcutCommand;
     private String[] args; 
-    
-    /**
-     * Private constructor for Command Guide so it cannot be constructed
-     * without parameters
-     */
-    private CommandGuide() {
-    }
     
     /**
      * Constructor for CommandGuide
      * Asserts that name and commandWord are non-null because it is
      * constructed by custom parameters in HelpWindow always.
+     * 
      * @param name Name of the action and command
      * @param commandWord command keyword
      * @param args optional arguments for command keyword
      */
-    public CommandGuide(String name, String commandWord, String... args) {
+    public CommandGuide(String name, String shortCommand, String commandWord, String... args) {
         assert name != null;
         assert commandWord != null;
         this.actionName = name;
         this.commandWord = commandWord;
+        this.shortcutCommand = shortCommand;
         this.args = args;
     }
     
@@ -215,6 +434,9 @@ public class CommandGuide {
         return commandWord;
     }
     
+    public String getShortcutCommand() {
+        return shortcutCommand;
+    }
     public String[] getArgs() {
         return args;
     }
@@ -268,25 +490,22 @@ public class CommandGuide {
     }
     
     @Override
-    public void updateFilters(Set<String> keywords, boolean pending, boolean done, boolean overdue){
-        this.showPending = pending;
-        this.showDone = done;
-        this.showOverdue = overdue;
+    public void updateFilters(Set<String> keywords, boolean isPendingShown, 
+                              boolean isDoneShown, boolean isOverdueShown){
+        this.isPendingShown = isPendingShown;
+        this.isDoneShown = isDoneShown;
+        this.isOverdueShown = isOverdueShown;
+        raise(new TaskFilterChangedEvent(isPendingShown, isDoneShown, isOverdueShown));
         updateFilteredListFindKeywords(keywords);
     }
     
     @Override
-    public void updateFilters(boolean pending, boolean done, boolean overdue) {
-        this.showPending = pending;
-        this.showDone = done;
-        this.showOverdue = overdue;
-        updateFilteredListWithStatuses();
-    }
-    
-    private void resetFilters() {
-        this.showPending = true;
-        this.showOverdue = true;
-        this.showDone = false;
+    public void updateFilters(
+            boolean isPendingShown, boolean isDoneShown, boolean isOverdueShown) {
+        this.isPendingShown = isPendingShown;
+        this.isDoneShown = isDoneShown;
+        this.isOverdueShown = isOverdueShown;
+        raise(new TaskFilterChangedEvent(isPendingShown, isDoneShown, isOverdueShown));
         updateFilteredListWithStatuses();
     }
     
@@ -309,15 +528,15 @@ public class CommandGuide {
         Predicate<Task> donePred = t -> t.getStatus() == Status.DONE;
         Predicate<Task> overduePred = t -> t.getStatus() == Status.OVERDUE;
         
-        if (showPending) {
+        if (isPendingShown) {
             basePred = basePred.or(pendingPred);
         }
         
-        if (showDone) {
+        if (isDoneShown) {
             basePred = basePred.or(donePred);
         }
         
-        if (showOverdue) {
+        if (isOverdueShown) {
             basePred = basePred.or(overduePred);
         }
         
@@ -341,9 +560,7 @@ public class CommandGuide {
         FxViewUtil.applyAnchorBoundaryParameters(commandTextField, 0.0, 0.0, 0.0, 0.0);
     }
     
-    /**
-     * Creates a pop over with content layout and style specified.
-     */
+    /** Creates a pop over with content layout and style specified. */
     private void createPopOver() {
         popOver = new PopOver();
         popOver.setId(POP_OVER_ID);
@@ -351,9 +568,7 @@ public class CommandGuide {
         setPopOverStyle();
     }
     
-    /**
-     * Sets up the layout inside popover.
-     */
+    /** Sets up the layout inside popover. */
     private void setPopOverLayout() {
         popOverText = new Text();
         popOverText.setId(POP_OVER_TEXT_ID);
@@ -364,9 +579,7 @@ public class CommandGuide {
         popOver.setContentNode(vBox);
     }
     
-    /**
-     * Sets up the style for popover and how it is displayed.
-     */
+    /** Sets up the style for popover and how it is displayed. */
     private void setPopOverStyle() {
         popOver.setArrowLocation(ArrowLocation.BOTTOM_CENTER);
         popOver.setFadeInDuration(new Duration(300));
@@ -408,7 +621,8 @@ public class CommandGuide {
      * Displays command feedback based on results.
      * If result is not successful, no feedback is displayed.
      * If successful, feedback is displayed.
-     * @param commandResult
+     * 
+     * @param commandResult Command result to use for display.
      */
     private void displayCommandFeedback(CommandResult commandResult) {
         assert commandResult != null;
@@ -430,6 +644,7 @@ public class CommandGuide {
 
     /**
      * Shows the UI elements for incorrect command.
+     * 
      * @param feedback feedback message to user to incorrect command.
      */
     private void showIncorrectCommand(String feedback) {
@@ -440,6 +655,7 @@ public class CommandGuide {
     
     /**
      * Shows the UI elements for correct command.
+     * 
      * @param feedback feedback message to user for correct command.
      */
     private void showCorrectCommand(String feedback) {
@@ -458,9 +674,134 @@ public class CommandGuide {
 
 }
 ```
+###### \java\taskle\ui\StatusDisplayPanel.java
+``` java
+/**
+ * A ui for the status display panel that is displayed on top of the command box
+ * in the application.
+ */
+public class StatusDisplayPanel extends UiPart {
+    private static final Logger logger = LogsCenter.getLogger(StatusDisplayPanel.class);
+
+    private HBox mainPane;
+
+    @FXML
+    private Label displayLabel;
+        
+    @FXML
+    private ImageView allChip;
+    
+    @FXML
+    private ImageView pendingChip;
+
+    @FXML
+    private ImageView overdueChip;
+    
+    @FXML
+    private ImageView doneChip;
+
+    private AnchorPane placeHolder;
+
+    private static final String FXML = "StatusDisplayPanel.fxml";
+
+    public static StatusDisplayPanel load(Stage stage, AnchorPane placeHolder) {
+        StatusDisplayPanel statusDisplayPanel = UiPartLoader.loadUiPart(stage, placeHolder, new StatusDisplayPanel());
+        statusDisplayPanel.configure();
+        return statusDisplayPanel;
+    }
+
+    public void configure() {
+        addMainPane();
+        setupInitialChips();
+        registerAsAnEventHandler(this);
+    }
+
+    private void addMainPane() {
+        FxViewUtil.applyAnchorBoundaryParameters(mainPane, 0.0, 0.0, 0.0, 0.0);
+        placeHolder.getChildren().add(mainPane);
+    }
+
+    @Override
+    public void setNode(Node node) {
+        mainPane = (HBox) node;
+    }
+
+    @Override
+    public void setPlaceholder(AnchorPane placeholder) {
+        this.placeHolder = placeholder;
+    }
+
+    @Override
+    public String getFxmlPath() {
+        return FXML;
+    }
+    
+    /**
+     * Prepares the initial chips, namely the pending and overdue chips and
+     * the display label.
+     */
+    private void setupInitialChips() {
+        ObservableList<Node> nodes = mainPane.getChildren();
+        nodes.clear();
+        nodes.add(displayLabel);
+        nodes.add(pendingChip);
+        nodes.add(overdueChip);
+    }
+
+    @Subscribe
+    private void handleTaskFilterChangedEvent(TaskFilterChangedEvent event) {
+        logger.info(LogsCenter.getEventHandlingLogMessage(event));
+        ObservableList<Node> nodes = mainPane.getChildren();
+        nodes.clear();
+        nodes.add(displayLabel);
+        updateNodes(nodes, event);
+    }
+    
+    /**
+     * Updates the nodes to reflect the TaskFilterChangedEvent.
+     * 
+     * @param nodes List of nodes used.
+     * @param event Event that reflects the new filters.
+     */
+    private void updateNodes(
+            ObservableList<Node> nodes, TaskFilterChangedEvent event) {
+        if (event.isAllShown) {
+            nodes.add(allChip);
+            return;
+        }
+        
+        updatePendingNode(nodes, event);
+        updateDoneNode(nodes, event);
+        updateOverdueNode(nodes, event);
+    }
+    
+    private void updatePendingNode(ObservableList<Node> nodes, 
+                                   TaskFilterChangedEvent event) {
+        if (event.isPendingShown) {
+            nodes.add(pendingChip);
+        }
+    }
+    
+    private void updateDoneNode(ObservableList<Node> nodes, 
+                                TaskFilterChangedEvent event) {
+        if (event.isDoneShown) {
+            nodes.add(doneChip);
+        } 
+    }
+    
+    private void updateOverdueNode(ObservableList<Node> nodes, 
+                                   TaskFilterChangedEvent event) {
+        if (event.isOverdueShown) {
+            nodes.add(overdueChip);
+        }
+    }
+    
+    
+    
+}
+```
 ###### \resources\view\DarkTheme.css
 ``` css
-*/
 .background {
     -fx-background-color: #37474F;
 }
@@ -474,6 +815,14 @@ public class CommandGuide {
 .label-bright {
     -fx-font-size: 11pt;
     -fx-font-family: "Segoe UI Semibold";
+    -fx-text-fill: white;
+    -fx-opacity: 1;
+}
+
+.label-status-display {
+    -fx-font-size: 14pt;
+    -fx-font-family: "Roboto Condensed";
+	-fx-font-weight: Bold;
     -fx-text-fill: white;
     -fx-opacity: 1;
 }
@@ -605,6 +954,10 @@ public class CommandGuide {
 
 .status-bar-with-border .label {
     -fx-text-fill: white;
+}
+
+.status-display-pane {
+    -fx-background-color: #37474F;
 }
 
 .grid-pane {
@@ -751,7 +1104,7 @@ public class CommandGuide {
     -fx-text-fill: #F70D1A;
 }
 
-#filterField, #personListPanel, #personWebpage {
+#filterField, #taskListPanel {
     -fx-effect: innershadow(gaussian, black, 10, 0, 0, 0);
 }
 ```
@@ -769,7 +1122,7 @@ public class CommandGuide {
 		<URL value="@Extensions.css" />
 	</stylesheets>
 	<children>
-		<TableView fx:id="helpTable" minHeight="600" minWidth="880"
+		<TableView fx:id="helpTable" minHeight="650" minWidth="880"
 			AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0"
 			AnchorPane.rightAnchor="0.0" AnchorPane.leftAnchor="0.0">
 		</TableView>
@@ -778,18 +1131,15 @@ public class CommandGuide {
 ```
 ###### \resources\view\MainWindow.fxml
 ``` fxml
+
 <?import java.net.URL?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="Infinity" maxWidth="Infinity" minHeight="-Infinity"
-	minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="taskle.ui.MainWindow">
+<VBox maxHeight="Infinity" maxWidth="Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="taskle.ui.MainWindow">
 	<stylesheets>
 		<URL value="@DarkTheme.css" />
 		<URL value="@Extensions.css" />
@@ -799,39 +1149,73 @@ public class CommandGuide {
 			<menus>
 				<Menu mnemonicParsing="false" text="File">
 					<items>
-						<MenuItem mnemonicParsing="false" onAction="#handleChangeStorageFile"
-							text="Open File" />
-						<MenuItem mnemonicParsing="false" onAction="#handleChangeDirectory"
-							text="Change Directory" />
-						<MenuItem mnemonicParsing="false" onAction="#handleExit"
-							text="Exit" />
+						<MenuItem mnemonicParsing="false" onAction="#handleChangeStorageFile" text="Open File" />
+						<MenuItem mnemonicParsing="false" onAction="#handleChangeDirectory" text="Change Directory" />
+						<MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
 					</items>
 				</Menu>
 				<Menu mnemonicParsing="false" text="Help">
 					<items>
-						<MenuItem fx:id="helpMenuItem" mnemonicParsing="false"
-							onAction="#handleHelp" text="Help" />
+						<MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" />
 					</items>
 				</Menu>
 			</menus>
 		</MenuBar>
-		<SplitPane id="splitPane" fx:id="splitPane" VBox.vgrow="ALWAYS">
-			<items>
-				<VBox fx:id="taskList" minWidth="340" prefWidth="340"
-					prefHeight="250">
-					<children>
-						<AnchorPane fx:id="taskListPanelPlaceholder"
-							VBox.vgrow="ALWAYS" />
-					</children>
-				</VBox>
-			</items>
-		</SplitPane>
-		<AnchorPane fx:id="commandBoxPlaceholder" styleClass="anchor-pane-with-border"
-			VBox.vgrow="NEVER">
-		</AnchorPane>
+		<AnchorPane fx:id="taskListPanelPlaceholder" VBox.vgrow="ALWAYS" />
+		<AnchorPane fx:id="statusDisplayPanelPlaceholder" maxHeight="60.0" minHeight="60.0" prefHeight="60.0" VBox.vgrow="NEVER" />
+		<AnchorPane fx:id="commandBoxPlaceholder" styleClass="anchor-pane-with-border" VBox.vgrow="NEVER" />
 		<AnchorPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
 	</children>
 </VBox>
+```
+###### \resources\view\StatusDisplayPanel.fxml
+``` fxml
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="60.0" minWidth="-Infinity" prefHeight="60.0" prefWidth="720.0" styleClass="status-display-pane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="taskle.ui.StatusDisplayPanel">
+	<stylesheets>
+		<URL value="@DarkTheme.css" />
+		<URL value="@Extensions.css" />
+	</stylesheets>
+	<children>
+      <Label fx:id="displayLabel" styleClass="label-status-display" text="Currently showing:">
+         <padding>
+            <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
+         </padding>
+      </Label>
+		
+		<ImageView fx:id="allChip" fitHeight="45.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+			<image>
+				<Image url="@../images/all_chip.png" />
+			</image>
+			<HBox.margin>
+				<Insets bottom="6.0" left="6.0" right="6.0" top="6.0" />
+			</HBox.margin>
+		</ImageView>
+		<ImageView fx:id="overdueChip" fitHeight="45.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+			<image>
+				<Image url="@../images/overdue_chip.png" />
+			</image>
+			<HBox.margin>
+				<Insets bottom="6.0" left="6.0" right="6.0" top="6.0" />
+			</HBox.margin>
+		</ImageView>
+		<ImageView fx:id="pendingChip" fitHeight="45.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+			<image>
+				<Image url="@../images/pending_chip.png" />
+			</image>
+			<HBox.margin>
+				<Insets bottom="6.0" left="6.0" right="6.0" top="6.0" />
+			</HBox.margin>
+		</ImageView>
+		<ImageView fx:id="doneChip" fitHeight="45.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+			<image>
+				<Image url="@../images/done_chip.png" />
+			</image>
+			<HBox.margin>
+				<Insets bottom="6.0" left="6.0" right="6.0" top="6.0" />
+			</HBox.margin>
+		</ImageView>
+	</children>
+</HBox>
 ```
 ###### \resources\view\TaskListCard.fxml
 ``` fxml
@@ -890,7 +1274,10 @@ public class CommandGuide {
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="taskle.ui.TaskListPanel">
+<VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+	AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"
+	xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="taskle.ui.TaskListPanel" stylesheets="@DarkTheme.css">
 	<stylesheets>
 		<URL value="@DarkTheme.css" />
 		<URL value="@Extensions.css" />
@@ -898,28 +1285,42 @@ public class CommandGuide {
 	<children>
 		<GridPane styleClass="header-grid-pane" HBox.hgrow="ALWAYS">
 			<columnConstraints>
-            <ColumnConstraints hgrow="NEVER" maxWidth="16.0" minWidth="16.0" prefWidth="16.0" />
-				<ColumnConstraints hgrow="NEVER" maxWidth="72.0" minWidth="72.0" prefWidth="72.0" />
-				<ColumnConstraints hgrow="NEVER" maxWidth="450.0" minWidth="450.0" prefWidth="450.0" />
-				<ColumnConstraints hgrow="NEVER" maxWidth="360.0" minWidth="360.0" prefWidth="360.0" />
-            <ColumnConstraints maxWidth="359.0" minWidth="359.0" prefWidth="359.0" />
+				<ColumnConstraints hgrow="NEVER" maxWidth="16.0"
+					minWidth="16.0" prefWidth="16.0" />
+				<ColumnConstraints hgrow="NEVER" maxWidth="72.0"
+					minWidth="72.0" prefWidth="72.0" />
+				<ColumnConstraints hgrow="NEVER" maxWidth="450.0"
+					minWidth="450.0" prefWidth="450.0" />
+				<ColumnConstraints hgrow="NEVER" maxWidth="360.0"
+					minWidth="360.0" prefWidth="360.0" />
+				<ColumnConstraints maxWidth="359.0" minWidth="359.0"
+					prefWidth="359.0" />
 			</columnConstraints>
 			<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0"
+					vgrow="ALWAYS" />
 			</rowConstraints>
 			<children>
-				<Label styleClass="header_label" text="ID" GridPane.columnIndex="1" GridPane.halignment="LEFT">
-               <GridPane.margin>
-                  <Insets left="10.0" />
-               </GridPane.margin></Label>
-				<Label maxWidth="400.0" minWidth="368.0" prefHeight="23.0" prefWidth="403.0" styleClass="header_label" text="Name" GridPane.columnIndex="2" />
-				<Label minWidth="-Infinity" prefHeight="21.0" prefWidth="356.0" styleClass="header_label" text="Reminder" GridPane.columnIndex="3" GridPane.halignment="LEFT" />
-					
-				<Label minWidth="-Infinity" prefWidth="500.0" styleClass="header_label" text="Dates" GridPane.columnIndex="4" GridPane.halignment="LEFT" />
+				<Label styleClass="header_label" text="ID"
+					GridPane.columnIndex="1" GridPane.halignment="LEFT">
+					<GridPane.margin>
+						<Insets left="10.0" />
+					</GridPane.margin>
+				</Label>
+				<Label maxWidth="400.0" minWidth="368.0" prefHeight="23.0"
+					prefWidth="403.0" styleClass="header_label" text="Name"
+					GridPane.columnIndex="2" />
+				<Label minWidth="-Infinity" prefHeight="21.0" prefWidth="356.0"
+					styleClass="header_label" text="Reminder" GridPane.columnIndex="3"
+					GridPane.halignment="LEFT" />
+
+				<Label minWidth="-Infinity" prefWidth="500.0" styleClass="header_label"
+					text="Dates" GridPane.columnIndex="4" GridPane.halignment="LEFT" />
 			</children>
 		</GridPane>
-		
-		<ListView fx:id="taskListView" styleClass="anchor-pane" VBox.vgrow="ALWAYS" />
+
+		<ListView fx:id="taskListView" styleClass="anchor-pane"
+			VBox.vgrow="ALWAYS" />
 	</children>
 </VBox>
 ```
