--- a/collated/main/A0125509H.md
+++ b/collated/main/A0125509H.md
@@ -1,4 +1,353 @@
 # A0125509H
+###### \java\taskle\commons\core\UnmodifiableObservableList.java
+``` java
+/**
+ * Unmodifiable view of an observable list
+ */
+public class UnmodifiableObservableList<E> implements ObservableList<E> {
+
+    public static final String MUTATION_OP_EXCEPTION_MESSAGE = "Attempted to modify an unmodifiable view";
+
+    private final ObservableList<? extends E> backingList;
+
+    public UnmodifiableObservableList(ObservableList<? extends E> backingList) {
+        if (backingList == null) {
+            throw new NullPointerException();
+        }
+        this.backingList = backingList;
+    }
+    
+    @Override
+    public final void addListener(ListChangeListener<? super E> listener) {
+        backingList.addListener(listener);
+    }
+
+    @Override
+    public final void removeListener(ListChangeListener<? super E> listener) {
+        backingList.removeListener(listener);
+    }
+
+    @Override
+    public final void addListener(InvalidationListener listener) {
+        backingList.addListener(listener);
+    }
+
+    @Override
+    public final void removeListener(InvalidationListener listener) {
+        backingList.removeListener(listener);
+    }
+
+    @Override
+    public final boolean addAll(Object... elements) {
+        throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+    }
+
+    @Override
+    public final boolean setAll(Object... elements) {
+        throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+    }
+
+    @Override
+    public final boolean setAll(Collection<? extends E> col) {
+        throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+    }
+    
+    @Override
+    public final boolean removeAll(Object... elements) {
+        throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+    }
+    
+    @Override
+    public final boolean retainAll(Object... elements) {
+        throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+    }
+
+    @Override
+    public final void remove(int from, int to) {
+        throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+    }
+
+
+    @Override
+    public final FilteredList<E> filtered(Predicate<E> predicate) {
+        return new FilteredList<>(this, predicate);
+    }
+
+    @Override
+    public final SortedList<E> sorted(Comparator<E> comparator) {
+        return new SortedList<>(this, comparator);
+    }
+
+    @SuppressWarnings("unchecked")
+    @Override
+    public final SortedList<E> sorted() {
+        return sorted(Comparator.nullsFirst((o1, o2) -> {
+            if (o1 instanceof Comparable) {
+                return ((Comparable) o1).compareTo(o2);
+            }
+            return Collator.getInstance().compare(o1.toString(), o2.toString());
+        }));
+    }
+
+    @Override
+    public final int size() {
+        return backingList.size();
+    }
+
+    @Override
+    public final boolean isEmpty() {
+        return backingList.isEmpty();
+    }
+    
+    @Override
+    public final boolean contains(Object o) {
+        return backingList.contains(o);
+    }
+    
+    @Override
+    public final Iterator<E> iterator() {
+        return new Iterator<E>() {
+            private final Iterator<? extends E> i = backingList.iterator();
+
+            public final boolean hasNext() {
+                return i.hasNext();
+            }
+            public final E next() {
+                return i.next();
+            }
+            public final void remove() {
+                throw new UnsupportedOperationException();
+            }
+            @Override
+            public final void forEachRemaining(Consumer<? super E> action) {
+                // Use backing collection version
+                i.forEachRemaining(action);
+            }
+        };
+    }
+
+    @Override
+    public final Object[] toArray() {
+        return backingList.toArray();
+    }
+
+    @Override
+    public final <T> T[] toArray(T[] a) {
+        return backingList.toArray(a);
+    }
+
+    @Override
+    public final boolean add(E o) {
+        throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+    }
+    
+    @Override
+    public final boolean remove(Object o) {
+        throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+    }
+
+    @Override
+    public final boolean containsAll(Collection<?> c) {
+        return backingList.containsAll(c);
+    }
+
+    @Override
+    public final boolean addAll(Collection<? extends E> c) {
+        throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+    }
+
+    @Override
+    public final boolean addAll(int index, Collection<? extends E> c) {
+        throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+    }
+    
+    @Override
+    public final boolean removeAll(Collection<?> c) {
+        throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+    }
+    
+    @Override
+    public final boolean retainAll(Collection<?> c) {
+        throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+    }
+
+    @Override
+    public final void replaceAll(UnaryOperator<E> operator) {
+        throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+    }
+
+    @Override
+    public final void sort(Comparator<? super E> c) {
+        throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+    }
+    
+    @Override
+    public final void clear() {
+        throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+    }
+
+    
+    @Override
+    public final boolean equals(Object o) {
+        return o == this || backingList.equals(o);
+    }
+
+    @Override
+    public final int hashCode() {
+        return backingList.hashCode();
+    }
+
+    
+    @Override
+    public final E get(int index) {
+        return backingList.get(index);
+    }
+
+    @SuppressWarnings("unchecked")
+    @Override
+    public final Object set(int index, Object element) {
+        throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+    }
+
+    @Override
+    public final void add(int index, Object element) {
+        throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+    }
+
+    @Override
+    public final E remove(int index) {
+        throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+    }
+    
+    @Override
+    public final int indexOf(Object o) {
+        return backingList.indexOf(o);
+    }
+    
+    @Override
+    public final int lastIndexOf(Object o) {
+        return backingList.lastIndexOf(o);
+    }
+
+    @Override
+    public final ListIterator<E> listIterator() {
+        return listIterator(0);
+    }
+    
+    @Override
+    public final ListIterator<E> listIterator(int index) {
+        return new ListIterator<E>() {
+            private final ListIterator<? extends E> i = backingList.listIterator(index);
+
+            public final boolean hasNext() {
+                return i.hasNext();
+            }
+            public final E next() {
+                return i.next();
+            }
+            public final boolean hasPrevious() {
+                return i.hasPrevious();
+            }
+            public final E previous() {
+                return i.previous();
+            }
+            public final int nextIndex() {
+                return i.nextIndex();
+            }
+            public final int previousIndex() {
+                return i.previousIndex();
+            }
+
+            public final void remove() {
+                throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+            }
+            public final void set(E e) {
+                throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+            }
+            public final void add(E e) {
+                throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+            }
+
+            @Override
+            public final void forEachRemaining(Consumer<? super E> action) {
+                i.forEachRemaining(action);
+            }
+        };
+    }
+
+    @Override
+    public final List<E> subList(int fromIndex, int toIndex) {
+        return Collections.unmodifiableList(backingList.subList(fromIndex, toIndex));
+    }
+
+    @Override
+    public final boolean removeIf(Predicate<? super E> filter) {
+        throw new UnsupportedOperationException(MUTATION_OP_EXCEPTION_MESSAGE);
+    }
+
+    @SuppressWarnings("unchecked")
+    @Override
+    public final Stream<E> stream() {
+        return (Stream<E>) backingList.stream();
+    }
+    
+    @Override
+    public final void forEach(Consumer<? super E> action) {
+        backingList.forEach(action);
+    }
+
+}
+```
+###### \java\taskle\logic\commands\DoneCommand.java
+``` java
+/**
+ * Marks a task as Done in the Task Manager.
+ */
+public class DoneCommand extends Command {
+    
+    public static final String COMMAND_WORD = "done";
+    public static final String COMMAND_WORD_SHORT = "d";
+    
+    public static final String MESSAGE_USAGE = COMMAND_WORD
+            + ": Marks the task (identified by the index number) as done.\n"
+            + "\nFormat: done task_number\n" 
+            + "\nExample: " + COMMAND_WORD + " 5";
+    
+    public static final String MESSAGE_DONE_TASK_SUCCESS = "Task Completed!";
+
+    public final int targetIndex;
+    public final boolean targetDone;
+    
+    public DoneCommand(int targetIndex, boolean targetDone) {
+        this.targetIndex = targetIndex;
+        this.targetDone = targetDone;
+    }
+    
+    @Override
+    public CommandResult execute() {
+        UnmodifiableObservableList<ReadOnlyTask> lastShownList = model.getFilteredTaskList();
+        if (lastShownList.size() < targetIndex) {
+            indicateAttemptToExecuteIncorrectCommand(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
+            return new CommandResult(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX, false);
+        }
+        
+        try {
+            model.storeTaskManager(COMMAND_WORD);
+            model.doneTask(targetIndex, targetDone);
+        } catch (TaskNotFoundException pnfe) {
+            model.rollBackTaskManager(false);
+            assert false : "The target task cannot be missing";
+        }
+        
+        return new CommandResult(
+                String.format(MESSAGE_DONE_TASK_SUCCESS, 
+                              "Task " + targetIndex + ": Completed"),
+                true);
+    }
+
+}
+    
+```
 ###### \java\taskle\logic\commands\RemoveCommand.java
 ``` java
     public final String targetIndexes;
@@ -24,7 +373,7 @@
 
     @Override
     public CommandResult execute() {
-        model.storeTaskManager();
+        model.storeTaskManager(COMMAND_WORD);
         
         for(int i=0; i<arraySize; i++) {
             UnmodifiableObservableList<ReadOnlyTask> lastShownList = model.getFilteredTaskList();
@@ -39,6 +388,7 @@
             try {
                  model.deleteTask(taskToDelete);
             } catch (TaskNotFoundException pnfe) {
+                model.rollBackTaskManager(false);
                 assert false : "The target task cannot be missing";
             }
         }
@@ -51,6 +401,10 @@
 ```
 ###### \java\taskle\logic\parser\DoneCommandParser.java
 ``` java
+/**
+ * Command Parser for done commands.
+ *
+ */
 public class DoneCommandParser extends CommandParser {
 
     @Override
@@ -86,16 +440,39 @@ public class DoneCommandParser extends CommandParser {
 ```
 ###### \java\taskle\logic\parser\RemoveCommandParser.java
 ``` java
+/**
+ * RemoveCommandParser to handle parsing of command arguments. *
+ */
+public class RemoveCommandParser extends CommandParser {
+
+    public RemoveCommandParser() {
+    }
+
+    @Override
+    public boolean canParse(String commandWord) {
+        assert (commandWord != null && !commandWord.isEmpty());
+        return commandWord.equals(RemoveCommand.COMMAND_WORD)
+               || commandWord.equals(RemoveCommand.COMMAND_WORD_SHORT);
+    }
+
+    @Override
+    public Command parseCommand(String args) {
+        return prepareRemove(args);
+    }
+    
+    /**
+     * Parses arguments in the context of the remove task command.
+     *
+     * @param args full command args string
+     * @return the prepared command
+     */
     private Command prepareRemove(String args) {
         String argsTrim = args.trim();
         String []s = argsTrim.split(" ");
-        for(int i=0; i<s.length; i++)
-        {
+        for(int i = 0; i < s.length; i++) {
             Optional<Integer> index = parseIndex(s[i]);
             if (!index.isPresent()) {
-                return new IncorrectCommand(
-                        String.format(MESSAGE_INVALID_COMMAND_FORMAT, 
-                                      RemoveCommand.MESSAGE_USAGE));
+                return new IncorrectCommand(MESSAGE_INVALID_COMMAND_FORMAT);
             }
         }
         
@@ -153,6 +530,76 @@ public class DoneCommandParser extends CommandParser {
         internalList.set(index, toEdit);
         logger.info("Task " + index + " Done! ");
         refreshInternalList();
+    }
+
+```
+###### \java\taskle\model\TaskManager.java
+``` java
+public class TaskManager implements ReadOnlyTaskManager {
+
+    private final TaskList tasks;
+
+    {
+        tasks = new TaskList();
+    }
+
+    public TaskManager() {
+    }
+
+    /** Tasks are copied into this taskmanager */
+    public TaskManager(TaskManager toBeCopied) {
+        this(toBeCopied.getUniqueTaskList());
+    }
+
+    /** Tasks are copied into this taskmanager */
+    public TaskManager(ReadOnlyTaskManager toBeCopied) {
+        this(toBeCopied.getUniqueTaskList());
+    }
+
+    /** Tasks are copied into this taskmanager */
+    public TaskManager(TaskList tasks) {
+        resetData(tasks.getInternalList());
+    }
+
+    public static ReadOnlyTaskManager getEmptyTaskManager() {
+        return new TaskManager();
+    }
+
+    //// list overwrite operations
+
+    public ObservableList<Task> getTasks() {
+        return tasks.getInternalList();
+    }
+
+    public void setTasks(List<Task> tasks) {
+        this.tasks.getInternalList().setAll(tasks);
+    }
+
+    public void resetData(Collection<? extends ReadOnlyTask> newTasks) {
+        setTasks(newTasks.stream().map(t -> t.copy()).collect(Collectors.toList()));
+    }
+
+    public void resetData(ReadOnlyTaskManager newData) {
+        resetData(newData.getTaskList());
+    }
+
+    //// task-level operations
+
+    /**
+     * Adds a task to the Task manager
+     * 
+     * @param p task to be added
+     */
+    public void addTask(Task p) {
+        tasks.add(p);
+    }
+
+    public boolean removeTask(ReadOnlyTask key) throws TaskList.TaskNotFoundException {
+        if (tasks.remove(key)) {
+            return true;
+        } else {
+            throw new TaskList.TaskNotFoundException();
+        }
     }
 ```
 ###### \java\taskle\model\TaskManager.java
