--- a/collated/main/A0140047U.md
+++ b/collated/main/A0140047U.md
@@ -20,6 +20,85 @@ public class StorageChangedEvent extends BaseEvent {
     }
 }
 ```
+###### \java\taskle\commons\events\storage\StorageChangeRequestEvent.java
+``` java
+/**
+ *  Indicates a request to change storage file/directory
+ */
+public class StorageChangeRequestEvent extends BaseEvent {
+
+    private String directory;
+    private ReadOnlyTaskManager taskManager;
+    
+    private final static String EVENT_MESSAGE = "Request to Change Storage: %1$s;";
+    private final static String EVENT_MESSAGE_TASK_MANAGER = " Reset Task Manager: %1$s";
+    
+    public StorageChangeRequestEvent(String directory, ReadOnlyTaskManager taskManager) {
+        this.directory = directory;
+        this.taskManager = taskManager;
+    }
+    
+    @Override
+    public String toString() {
+       return String.format(EVENT_MESSAGE, directory) + String.format(EVENT_MESSAGE_TASK_MANAGER, taskManager != null); 
+    }
+    
+    public String getDirectory() {
+        return directory;
+    }
+
+    public ReadOnlyTaskManager getTaskManager() {
+        return taskManager;
+    }
+}
+```
+###### \java\taskle\commons\events\storage\StorageMenuItemRequestEvent.java
+``` java
+/**
+ * Indicates a request to change storage file/directory from clicking menu items
+ */
+public class StorageMenuItemRequestEvent extends BaseEvent {
+
+    private String command;
+    private boolean isValidStatus;
+    
+    public StorageMenuItemRequestEvent(String command, boolean isValidStatus) {
+        this.command = command;
+        this.isValidStatus = isValidStatus;
+    }
+    
+    @Override
+    public String toString() {
+        return "Storage Change requested from Menu Interface.";
+    }
+    
+    public String getCommand() {
+        return command;
+    }
+    
+    public boolean isValid() {
+        return isValidStatus;
+    }
+
+}
+```
+###### \java\taskle\commons\util\FileUtil.java
+``` java
+    /**
+     * Converts Absolute Path to Canonical Path
+     * @param file File with absolute path
+     * @return file with canonical path
+     */
+    public static File convertToCanonicalPath(File file) {
+        try {
+            file = new File(file.getCanonicalPath());
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        return file;
+    }
+}
+```
 ###### \java\taskle\commons\util\StorageUtil.java
 ``` java
 //Manage changes in directory of storage file
@@ -27,7 +106,22 @@ public class StorageUtil {
     
     private static Stack<Config> configHistory = new Stack<Config>();
     private static Stack<Config> redoConfigHistory = new Stack<Config>();
+    private static Stack<OperationType> operationHistory = new Stack<OperationType>();
+    private static Stack<OperationType> redoOperationHistory = new Stack<OperationType>();
     
+    private static final int INDEX_DIRECTORY = 0;
+    private static final int INDEX_FILE_NAME = 1;
+    private static final int FILE_PATH_ARRAY_LENGTH = 2;
+
+    public enum OperationType {
+        CHANGE_DIRECTORY, OPEN_FILE
+    }
+    
+    /**
+     * Moves file to the selected directory and updates Config accordingly
+     * @param selectedDirectory directory to be changed to
+     * @return true upon success operation, false otherwise
+     */
     public static boolean updateDirectory(File selectedDirectory) {
         assert selectedDirectory != null;
         try {
@@ -43,6 +137,12 @@ public class StorageUtil {
         }
     }
     
+    /**
+     * Open selected file and updates Config accordingly. 
+     * New taskmanager is loaded and model will be reset.
+     * @param selectedFile file to read data from
+     * @return true upon success operation, false otherwise
+     */
     public static boolean updateFile(File selectedFile) {
         assert selectedFile != null;
         ReadOnlyTaskManager newTaskManager;
@@ -59,146 +159,250 @@ public class StorageUtil {
         }
     }
     
+    /**
+     * Splits file path to directory and fileName
+     * @param filePath path of file
+     * @return String[FILE_PATH_ARRAY_LENGTH] containing directory and fileName
+     */
     public static String[] splitFilePath(String filePath) {
         assert filePath != null;
-        String[] separatedFilePath = new String[2];
-        separatedFilePath[0] = filePath.substring(0, filePath.lastIndexOf(File.separator));
-        separatedFilePath[1] = filePath.substring(filePath.lastIndexOf(File.separator) + 1);
+        String[] separatedFilePath = new String[FILE_PATH_ARRAY_LENGTH];
+        separatedFilePath[INDEX_DIRECTORY] = filePath.substring(0, filePath.lastIndexOf(File.separator));
+        separatedFilePath[INDEX_FILE_NAME] = filePath.substring(filePath.lastIndexOf(File.separator) + 1);
         return separatedFilePath;
     }
     
-    public static void storeConfig(boolean isStorageOperation) throws DataConversionException {
-        System.out.println(isStorageOperation);
-        if (isStorageOperation) {
+    /**
+     * Saves Config state by pushing it into stack
+     * Config states only saved if it is storage command (openFile and changeDirectory)
+     * @param isStorageOperation true if storage operation, false otherwise
+     * @throws DataConversionException
+     */
+    public static void storeConfig(OperationType storageOperation) throws DataConversionException {
+        if (storageOperation != null) {
             Config config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
             configHistory.push(config);
+            operationHistory.push(storageOperation);
         } else {
             redoConfigHistory.clear();
-            configHistory.push(null);
+            redoOperationHistory.clear();
         }
     }
     
-    public static boolean restoreConfig() throws DataConversionException {
-        if (configHistory.isEmpty()) {
-            return false;
-        }
+    /**
+     * restoreConfig undo changes done to Config
+     * If configHistory is empty or its top element is null, a mutating command is to be undo instead 
+     * and method will push null element to redoConfigHistory
+     * Else, perform corresponding commands to undo Config changes
+     * @return true if undo config, false if undo mutating command
+     * @throws DataConversionException
+     */
+    public static void restoreConfig() throws DataConversionException {
+        assert !configHistory.isEmpty();
+        
         Config originalConfig = configHistory.pop();
         Config currentConfig = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
         redoConfigHistory.push(currentConfig);
         
-        if (originalConfig == null) {
-            redoConfigHistory.push(null);
-            return false;
-        } else if (originalConfig.getTaskManagerFileName().equals(currentConfig.getTaskManagerFileName())) {
+        OperationType operation = operationHistory.pop();
+        redoOperationHistory.push(operation);
+            
+        if (operation == OperationType.CHANGE_DIRECTORY) {
             updateDirectory(new File(originalConfig.getTaskManagerFileDirectory()));
         } else {
             updateFile(new File(originalConfig.getTaskManagerFilePath()));
         }
-        return true;
     }
     
-    public static boolean revertConfig() throws DataConversionException {
-        if (redoConfigHistory.isEmpty()) {
-            return false;
-        }
+    /**
+     * revertConfig redo changes done to Config
+     * If redoConfigHistory is empty or its top element is null, a mutating command is to be redone instead 
+     * and method will push null element to configHistory
+     * Else, perform corresponding commands to redo Config changes
+     * @return true if redo config, false if redo mutating command
+     * @throws DataConversionException
+     */
+    public static void revertConfig() throws DataConversionException {
+        assert !redoConfigHistory.isEmpty();
+        
         Config redoConfig = redoConfigHistory.pop();
         Config currentConfig = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
         configHistory.push(currentConfig);
         
-        if (redoConfig == null) {
-            configHistory.push(null);
-            return false;
-        } else if (redoConfig.getTaskManagerFileName().equals(currentConfig.getTaskManagerFileName())) {
+        OperationType operation = redoOperationHistory.pop();
+        operationHistory.push(operation);
+            
+        if (operation == OperationType.CHANGE_DIRECTORY) {
             updateDirectory(new File(redoConfig.getTaskManagerFileDirectory()));
         } else {
             updateFile(new File(redoConfig.getTaskManagerFilePath()));
         }
-        return true;
+    }
+    
+    //Removes latest stored element in configHistory when storage operation checks fails
+    public static void resolveConfig() {
+        configHistory.pop();
+    }
+    
+    //Returns true if configHistory is empty
+    public static boolean isConfigHistoryEmpty() {
+        return configHistory.isEmpty();
+    }
+    
+    //Returns true if redoConfigHistory is empty
+    public static boolean isRedoConfigHistoryEmpty() {
+        return redoConfigHistory.isEmpty();
+    }
+    
+    //Clears redoConfigHistory, whenever a command, besides undo, is entered
+    public static void clearRedoConfig() {
+        redoConfigHistory.clear();
+    }
+    
+    //Clears redoConfigHistory, whenever a command, besides undo, is entered
+    public static void undoConfig() {
+        configHistory.pop();
+    }
+    
+    //Clears both config history stacks
+    public static void clearHistory() {
+        configHistory.clear();
+        redoConfigHistory.clear();
     }
 }
 ```
 ###### \java\taskle\logic\commands\ChangeDirectoryCommand.java
 ``` java
-//Change directory of current storage file
+/**
+ * Change directory of current storage file
+ */
 public class ChangeDirectoryCommand extends Command {
 
-    public static final String COMMAND_WORD = "changedirectory";
-    public static final String COMMAND_WORD_SHORT = "cd";
-
-    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Reads data from specified file.\n"
-            + "Format: add directory\n"
-            + "Example: " + COMMAND_WORD + " C:" + File.separator + "Users" + File.separator + "John"
+    public static final String COMMAND_WORD_SHORT = "s";
+    public static final String COMMAND_WORD = "save";
+    public static final String MESSAGE_USAGE = "\n" 
+            + COMMAND_WORD 
+            + ": Reads data from specified file.\n"
+            + "\nFormat: " + COMMAND_WORD + " directory_path\n"
+            + "\nExample: " + COMMAND_WORD + " C:" + File.separator + "Users" + File.separator + "John"
             + File.separator + "desktop";
 
     public static final String MESSAGE_SUCCESS = "Storage Directory has been changed to %1$s";
     
     public static final String MESSAGE_FAILURE = "An error occurred when changing directory.";
+    public static final String MESSAGE_FILE_CONFLICT = "Existing file found in requested directory.";
+    public static final String MESSAGE_SAME_DIRECTORY = "Requested directory is the same as current.";
     
     private final File file;
     
     public ChangeDirectoryCommand(String directoryPath) {
-        file = new File(directoryPath);
+        this.file = FileUtil.convertToCanonicalPath(new File(directoryPath));
     }
     
     @Override
     public CommandResult execute() {
         try {
-            StorageUtil.storeConfig(true);
+            if (isConflict()) {
+                return new CommandResult(MESSAGE_FAILURE, false);
+            }
+            
+            model.storeTaskManager(COMMAND_WORD);    
             if (StorageUtil.updateDirectory(file)) {
                 return new CommandResult(String.format(MESSAGE_SUCCESS, file.getAbsolutePath()), true);
             } else {
                 indicateAttemptToExecuteIncorrectCommand(MESSAGE_FAILURE);
+                StorageUtil.resolveConfig();
+                model.rollBackTaskManager(true);
                 return new CommandResult(MESSAGE_FAILURE, false);
             }
         } catch (DataConversionException e) {
-            e.printStackTrace();
+            indicateAttemptToExecuteIncorrectCommand(Messages.MESSAGE_CONFIG_ERROR);
             return new CommandResult(MESSAGE_FAILURE, false);
         }
-       
     }
-
+    
+    /** Checks if requested directory contains a conflicting file or 
+     * points to the current directory.
+     * 
+     * @throws DataConversionException thrown when failed to convert data
+     * */
+    public boolean isConflict() throws DataConversionException {
+        Config config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
+        if (config.getTaskManagerFileDirectory().equalsIgnoreCase(file.getAbsolutePath())) {
+            indicateAttemptToExecuteIncorrectCommand(MESSAGE_SAME_DIRECTORY);
+            return true;
+        } else if (new File(file.getAbsolutePath(), config.getTaskManagerFileName()).exists()) {
+            indicateAttemptToExecuteIncorrectCommand(MESSAGE_FILE_CONFLICT);
+            return true;
+        } else {
+            return false;
+        }
+    }
 }
 ```
 ###### \java\taskle\logic\commands\OpenFileCommand.java
 ``` java
-//Opens data from specified file
+/**
+ * Opens data from specified file
+ */
 public class OpenFileCommand extends Command {
     
-    public static final String COMMAND_WORD = "openfile";
-    public static final String COMMAND_WORD_SHORT = "of";
+    public static final String COMMAND_WORD_SHORT = "o";
+    public static final String COMMAND_WORD = "open";
 
-    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Reads data from specified file.\n"
-            + "Format: add file_path\n"
-            + "Example: " + COMMAND_WORD + " C:" + File.separator + "Users" + File.separator + "John"
+    public static final String MESSAGE_USAGE = "\n" 
+            + COMMAND_WORD 
+            + ": Reads data from specified existing file.\n"
+            + "\nFormat: open file_path\n"
+            + "\nExample: " + COMMAND_WORD + " C:" + File.separator + "Users" + File.separator + "John"
             + File.separator + "desktop" + File.separator + "taskle.xml";
 
     public static final String MESSAGE_SUCCESS = "Storage File has been changed.";
     
-    public static final String MESSAGE_FAILURE = "Invalid file format detected. Unable to open file";
+    public static final String MESSAGE_FAILURE = "Failed to open file.";
+    public static final String MESSAGE_INVALID_FILE_FORMAT = "Invalid file format detected. Unable to open file.";
+    public static final String MESSAGE_SAME_FILE = "You are already viewing the requested file.";
     
     private final File file;
     
     public OpenFileCommand(String filePath) {
-        this.file = new File(filePath);
+        this.file = FileUtil.convertToCanonicalPath(new File(filePath));
     }
     
     @Override
     public CommandResult execute() {
         try {
-            StorageUtil.storeConfig(true);
+            if (isSameFile()) {
+                return new CommandResult(MESSAGE_FAILURE, false);
+            }
+            
+            model.storeTaskManager(COMMAND_WORD);
             if (StorageUtil.updateFile(file)) {
                 return new CommandResult(MESSAGE_SUCCESS, true);
             } else {
-                indicateAttemptToExecuteIncorrectCommand(MESSAGE_FAILURE);
+                indicateAttemptToExecuteIncorrectCommand(MESSAGE_INVALID_FILE_FORMAT);
+                StorageUtil.resolveConfig();
+                model.rollBackTaskManager(true);
                 return new CommandResult(MESSAGE_FAILURE, false);
             }
         } catch (DataConversionException e) {
-            e.printStackTrace();
+            indicateAttemptToExecuteIncorrectCommand(Messages.MESSAGE_CONFIG_ERROR);
             return new CommandResult(MESSAGE_FAILURE, false);
         }
         
     }
-    
+
+
+    public boolean isSameFile() throws DataConversionException {
+        Config config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
+        
+        if (config.getTaskManagerFilePath().equalsIgnoreCase(file.getAbsolutePath())) {
+            indicateAttemptToExecuteIncorrectCommand(MESSAGE_SAME_FILE);
+            return true;
+        } else {
+            return false;
+        }
+    }
 }
 ```
 ###### \java\taskle\logic\commands\RedoCommand.java
@@ -209,15 +413,15 @@ public class OpenFileCommand extends Command {
 public class RedoCommand extends Command {
 
     public static final String COMMAND_WORD = "redo";
-    
     public static final String COMMAND_WORD_SHORT = "r";
-
-    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Redoes a command that was previously undone." + "Example: "
+    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Redo a command that was previously undone." + "Example: "
             + COMMAND_WORD;
-
-    public static final String MESSAGE_SUCCESS = "Redid Undone Command.";
+    public static final String MESSAGE_SUCCESS = "Redo previous command.";
+    public static final String MESSAGE_FAILURE = "An error occured when running redo command.";
+    public static final String MESSAGE_NOTHING_TO_REDO = "There is nothing to redo.";
     
-    public static final String MESSAGE_NOTHING_TO_REDO = "There is Nothing to Redo.";
+    private static final int STATUS_EMPTY_HISTORY = 0;
+    private static final int STATUS_ERROR_HISTORY = -1;
     
     public RedoCommand() {
         
@@ -225,10 +429,16 @@ public class RedoCommand extends Command {
     
     @Override
     public CommandResult execute() {
-        if (!model.revertTaskManager()) {
-            return new CommandResult(MESSAGE_NOTHING_TO_REDO, true);
-        }
-        return new CommandResult(MESSAGE_SUCCESS, true);
+        switch (model.revertTaskManager()) {
+        case STATUS_ERROR_HISTORY:
+            indicateAttemptToExecuteIncorrectCommand(Messages.MESSAGE_CONFIG_ERROR);
+            return new CommandResult(MESSAGE_FAILURE, false);
+        case STATUS_EMPTY_HISTORY:
+            indicateAttemptToExecuteIncorrectCommand(MESSAGE_NOTHING_TO_REDO);
+            return new CommandResult(MESSAGE_FAILURE, false);
+        default:
+            return new CommandResult(MESSAGE_SUCCESS, true);
+    }
     }
     
 }
@@ -241,15 +451,15 @@ public class RedoCommand extends Command {
 public class UndoCommand extends Command {
 
     public static final String COMMAND_WORD = "undo";
-    
     public static final String COMMAND_WORD_SHORT = "u";
-
-    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Undoes the most recent command." + "\n\nExample: "
+    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Undo the most recent command." + "\n\nExample: "
             + COMMAND_WORD;
+    public static final String MESSAGE_SUCCESS = "Restored previous command.";
+    public static final String MESSAGE_FAILURE = "An error occured when running undo command.";
+    public static final String MESSAGE_EMPTY_HISTORY = "There is nothing to undo.";
 
-    public static final String MESSAGE_SUCCESS = "Restored Previous Command!";
-    
-    public static final String MESSAGE_EMPTY_HISTORY = "There is Nothing to Undo!";
+    private static final int STATUS_EMPTY_HISTORY = 0;
+    private static final int STATUS_ERROR_HISTORY = -1;
     
     public UndoCommand() {
         
@@ -257,10 +467,16 @@ public class UndoCommand extends Command {
     
     @Override
     public CommandResult execute() {
-        if (!model.restoreTaskManager()) {
-            return new CommandResult(MESSAGE_EMPTY_HISTORY, true);
+        switch (model.restoreTaskManager()) {
+            case STATUS_ERROR_HISTORY:
+                indicateAttemptToExecuteIncorrectCommand(Messages.MESSAGE_CONFIG_ERROR);
+                return new CommandResult(MESSAGE_FAILURE, false);
+            case STATUS_EMPTY_HISTORY:
+                indicateAttemptToExecuteIncorrectCommand(MESSAGE_EMPTY_HISTORY);
+                return new CommandResult(MESSAGE_FAILURE, false);
+            default:
+                return new CommandResult(MESSAGE_SUCCESS, true);
         }
-        return new CommandResult(MESSAGE_SUCCESS, true);
     }
     
 }
@@ -270,10 +486,9 @@ public class UndoCommand extends Command {
     /** Updates directory to given filePath */
     void changeDirectory(String filePath);
     
-    List<Task> verifyReminder(Date currentDateTime);
-    
-    void dismissReminder(Date currentDateTime);
-
+```
+###### \java\taskle\logic\Logic.java
+``` java
     /** Resets Model based on given data */
     void resetModel(ReadOnlyTaskManager taskManager);
     
@@ -288,16 +503,10 @@ public class UndoCommand extends Command {
         logger.info("----------------[CHANGE DIRECTORY][" + filePath + "]");
         storage.setTaskManagerFilePath(filePath);
     }
-
-    @Override
-    public List<Task> verifyReminder(Date currentDateTime) {
-        return model.verifyRemindDate(currentDateTime);
-    }
     
-    @Override
-    public void dismissReminder(Date currentDateTime) {
-        model.dismissReminder(currentDateTime);
-    }
+```
+###### \java\taskle\logic\LogicManager.java
+``` java
     
     @Override
     public void resetModel(ReadOnlyTaskManager taskManager) {
@@ -316,7 +525,9 @@ public class UndoCommand extends Command {
 ```
 ###### \java\taskle\logic\parser\ChangeDirectoryCommandParser.java
 ``` java
-//ChangeDirectoryParser class to handle parsing of change directory commands
+/**
+ * ChangeDirectoryParser class to handle parsing of change directory commands *
+ */
 public class ChangeDirectoryCommandParser extends CommandParser {
 
     @Override
@@ -325,7 +536,8 @@ public class ChangeDirectoryCommandParser extends CommandParser {
     }
     
     /**
-     * Checks if argument is a directory and the directory exists
+     * Checks if argument is a directory and the directory exists.
+     * 
      * @param directory path of the directory
      * @return ChangeDirectoryCommand if directory is valid, IncorrectCommand otherwise
      */
@@ -427,65 +639,106 @@ public class UndoCommandParser extends CommandParser {
 ###### \java\taskle\model\Model.java
 ``` java
     /** Stores current TaskManager state */
-    void storeTaskManager();
+    void storeTaskManager(String command);
     
     /** Restores most recently stored TaskManager state */
-    boolean restoreTaskManager();
+    int restoreTaskManager();
     
     /** Undo most recently restored TaskManager state */
-    boolean revertTaskManager();
+    int revertTaskManager();
+    
+    /** Removes most recently stored TaskManager state upon fail in check */
+    void rollBackTaskManager(boolean isStorageOperation);
+    
+    /** Handles StorageMenuItemRequestEvent to manage taskManagerHistory stack */
+    void handleStorageMenuItemRequestEvent(StorageMenuItemRequestEvent smire);
     
 ```
 ###### \java\taskle\model\ModelManager.java
 ``` java
     /** Stores current TaskManager state */
     @Override
-    public synchronized void storeTaskManager() {
-        taskManagerHistory.push(new TaskManager(taskManager));
-        redoTaskManagerHistory.clear();
-        
+    public synchronized void storeTaskManager(String command) {
         try {
-            StorageUtil.storeConfig(false);
+            if (command.equals(ChangeDirectoryCommand.COMMAND_WORD)) {
+                StorageUtil.storeConfig(OperationType.CHANGE_DIRECTORY);
+                taskManagerHistory.push(null);
+            } else if (command.equals(OpenFileCommand.COMMAND_WORD)) {
+                StorageUtil.storeConfig(OperationType.OPEN_FILE);
+                taskManagerHistory.push(null);
+            } else {
+                StorageUtil.storeConfig(null);
+                taskManagerHistory.push(new TaskManager(taskManager));
+            }
+            redoTaskManagerHistory.clear();
+            StorageUtil.clearRedoConfig();
+            
         } catch (DataConversionException e) {
             e.printStackTrace();
         }
     }
     
-    /** Restores recently saved TaskManager state*/
+    /** Restores recently saved TaskManager state */
     @Override
-    public synchronized boolean restoreTaskManager() {
+    public synchronized int restoreTaskManager() {
         try {
-            if (StorageUtil.restoreConfig()) {
-                return true;
-            } else if (!taskManagerHistory.isEmpty()) {
+            if (StorageUtil.isConfigHistoryEmpty() && taskManagerHistory.isEmpty()) {
+                return STATUS_EMPTY_HISTORY;
+            } else if (!taskManagerHistory.isEmpty() && taskManagerHistory.peek() == null) {
+                StorageUtil.restoreConfig(); 
+                taskManagerHistory.pop();
+                redoTaskManagerHistory.push(null);
+                return STATUS_AVAILABLE_HISTORY;
+            } else {
                 TaskManager recentTaskManager = taskManagerHistory.pop();
                 redoTaskManagerHistory.push(new TaskManager(taskManager));
                 this.resetData(recentTaskManager);
-                return true;
+                return STATUS_AVAILABLE_HISTORY;
             }
-            return false;
         } catch (DataConversionException e) {
-            e.printStackTrace();
-            return false;
+            return STATUS_ERROR_HISTORY;
         }
     }
     
     /** Reverts changes made from restoring recently saved TaskManager state */
     @Override
-    public synchronized boolean revertTaskManager() {
-        try {
-            if (StorageUtil.revertConfig()) {
-                return true;
-            } else if (!redoTaskManagerHistory.isEmpty()) {
+    public synchronized int revertTaskManager() {
+         try {
+            if (StorageUtil.isRedoConfigHistoryEmpty() && redoTaskManagerHistory.isEmpty()) {
+                return STATUS_EMPTY_HISTORY;
+            } else if (!redoTaskManagerHistory.isEmpty() && redoTaskManagerHistory.peek() == null) {
+                StorageUtil.revertConfig();
+                redoTaskManagerHistory.pop();
+                taskManagerHistory.push(null);
+                return STATUS_AVAILABLE_HISTORY;
+            } else {
                 TaskManager redoTaskManager = redoTaskManagerHistory.pop();
                 taskManagerHistory.push(new TaskManager(taskManager));
                 this.resetData(redoTaskManager);
-                return true;
+                return STATUS_AVAILABLE_HISTORY;
             }
-            return false;
         } catch (DataConversionException e) {
-            e.printStackTrace();
-            return false;
+            return STATUS_ERROR_HISTORY;
+        }
+    }
+    
+    @Override
+    public synchronized void rollBackTaskManager(boolean isStorageOperation) {
+
+        taskManagerHistory.pop();
+        if (isStorageOperation) {
+            StorageUtil.undoConfig();
+        }
+    }
+    
+    
+    @Override
+    @Subscribe
+    public void handleStorageMenuItemRequestEvent(StorageMenuItemRequestEvent smire) {
+        if (smire.isValid()) {
+            storeTaskManager(smire.getCommand());
+        } else {
+            rollBackTaskManager(true);
         }
     }
     
@@ -494,7 +747,6 @@ public class UndoCommandParser extends CommandParser {
 ``` java
 /**
  * Custom Comparator that compares tasks when being sorted in internalList
- *
  */
 public class TaskComparator implements Comparator<Task> {
     
@@ -548,9 +800,10 @@ public class TaskComparator implements Comparator<Task> {
     }
         
     /**
-     * Maps status values to their priority for sorting
+     * Maps status values to their priority for sorting.
+     * 
      * @param status Status enum as defined in ReadOnlyTask
-     * @return
+     * @return a priority integer
      */
     private int getPriority(Status status) {
         switch (status) {
@@ -588,9 +841,7 @@ public class TaskComparator implements Comparator<Task> {
 ###### \java\taskle\ui\ExistingFileDialog.java
 ``` java
 /**
- * 
  * Confirmation dialog to replace existing file
- *
  */
 public class ExistingFileDialog {
 
@@ -605,7 +856,7 @@ public class ExistingFileDialog {
 
         Optional<ButtonType> result = alert.showAndWait();
         if (result.get() == ButtonType.OK) {
-            StorageUtil.storeConfig(true);
+            StorageUtil.storeConfig(OperationType.CHANGE_DIRECTORY);
             StorageUtil.updateDirectory(selectedDirectory);
             Config config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
             
@@ -617,7 +868,8 @@ public class ExistingFileDialog {
 ###### \java\taskle\ui\MainWindow.java
 ``` java
     /**
-     * Change storage file location
+     * Change storage file location.
+     * 
      * @throws DataConversionException 
      */
     @FXML
@@ -625,23 +877,26 @@ public class ExistingFileDialog {
         config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
         DirectoryChooser directoryChooser = new DirectoryChooser();
         File selectedDirectory = directoryChooser.showDialog(primaryStage);
+        
         if (selectedDirectory == null) {
         } else if ((selectedDirectory.getAbsolutePath()).equals(config.getTaskManagerFileDirectory())) {
         } else if (new File(selectedDirectory.getAbsolutePath(), config.getTaskManagerFileName()).exists()) {
             ExistingFileDialog.load(notificationPane, primaryStage, selectedDirectory);
         } else {
-            StorageUtil.storeConfig(true);
+            EventsCenter.getInstance().post(new StorageMenuItemRequestEvent(ChangeDirectoryCommand.COMMAND_WORD, true));
             if (StorageUtil.updateDirectory(selectedDirectory)) {
                 config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
                 notificationPane.show(String.format(CHANGE_DIRECTORY_SUCCESS, config.getTaskManagerFileDirectory()));
             } else {
+                EventsCenter.getInstance().post(new StorageMenuItemRequestEvent(ChangeDirectoryCommand.COMMAND_WORD, false));
                 notificationPane.show(CHANGE_DIRECTORY_FAILURE);
             }
         }
     }
     
     /**
-     * Change storage file
+     * Change storage file.
+     * 
      * @throws DataConversionException 
      */
     @FXML
@@ -651,12 +906,14 @@ public class ExistingFileDialog {
         fileChooser.getExtensionFilters().add(
                 new ExtensionFilter(FILE_CHOOSER_NAME, FILE_CHOOSER_TYPE));
         File selectedFile = fileChooser.showOpenDialog(primaryStage);
+        
         if (selectedFile != null && !selectedFile.getAbsolutePath().equals(config.getTaskManagerFilePath())) {
-            StorageUtil.storeConfig(true);
+            EventsCenter.getInstance().post(new StorageMenuItemRequestEvent(OpenFileCommand.COMMAND_WORD, true));
             if (StorageUtil.updateFile(selectedFile)) {
                 notificationPane.show(CHANGE_FILE_SUCCESS);
             } else {
                 notificationPane.show(CHANGE_FILE_ERROR);
+                EventsCenter.getInstance().post(new StorageMenuItemRequestEvent(OpenFileCommand.COMMAND_WORD, false));
             }
         }
     }
